[package]
name = "plabble-codec"
version = "0.1.0"
edition = "2024"
description = "Plabble Transport Protocol codec"
license = "BSD-3-Clause"
categories = ["cryptography", "encoding", "chat", "plabble"]
repository = "https://github.com/plabble/ptp-codec"

[lib]
name = "plabble_codec"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
aes = "0.9.0-rc.4"
aes-gcm = "0.11.0-rc.3"
base64 = "0.22.1"
binary-codec = "0.6.1"
# binary-codec = { path = "../Binary-Codec/binary-codec" }
blake2 = "0.10.6"
blake3 = { version = "1.8.2", optional = true }
ctr = "0.10.0-rc.4"
cipher = "0.5.1"
chacha20 = "0.10.0"
chacha20poly1305 = "0.11.0-rc.3"
chrono = { version = "^0.4", features = ["serde"] }
ed25519-dalek = "2.2.0"
log = "0.4.29"
toml = { version = "^1.0", optional = true }
ml-dsa = { version = "0.0.4", optional = true }
ml-kem = { version = "0.2.1", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde-value = "^0.7"
serde_with = { version = "^3.16", features = ["base64", "hex"] }
serde_json = { version = "^1.0", optional = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# Dependency fuckup with rand...
rand_core_064 = { package = "rand_core", version = "0.6.4", features = ["getrandom"]}
getrandom = { version = "0.2", optional = true, features = ["js"] }

# WASM dependencies
wasm-bindgen = { version = "0.2.110", optional = true }
js-sys = { version = "0.3.87", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4.63", optional = true }

# Protocol implementation dependencies
# hints: async-broadcast
async-channel = { version = "2.5.0", optional = true }
rand = "0.10.0"
# rand = "0.10.0"

[features]
default = ["blake-3", "pqc-lite", "pqc-heavy", "with-toml", "wasm"]
blake-3 = ["blake3"]
pqc-lite = ["ml-dsa", "ml-kem"]
with-json = ["serde_json"]
with-toml = ["toml"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "getrandom", "wasm-bindgen-futures", "with-json", "client"]
ffi = []
pqc-heavy = []
protocol = ["async-channel"]
server = ["protocol"]
client = ["protocol"]

[dev-dependencies]
toml = "^1.0"
hex = "^0.4"
serde_json = "^1.0"
env_logger = "^0.11"

[profile.release]
panic = "abort"
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
